--- a/CovidTracker/Base.lproj/Main.storyboard
+++ b/CovidTracker/Base.lproj/Main.storyboard
@@ -317,9 +317,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y8A-So-SpT">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y8A-So-SpT">
                                 <rect key="frame" x="0.0" y="44" width="320" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Active" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ltS-zS-D2W">
                                         <rect key="frame" x="8" y="15" width="80" height="21"/>
@@ -351,10 +350,12 @@
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="TiH-4H-qfR"/>
+                                </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ug5-Kc-LWe">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ug5-Kc-LWe">
                                 <rect key="frame" x="0.0" y="94" width="320" height="474"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="StateListCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StateListCell" rowHeight="110" id="zP5-Wl-xFp" customClass="StateListCell" customModule="CovidTracker" customModuleProvider="target">
@@ -453,6 +454,15 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="y8A-So-SpT" firstAttribute="top" secondItem="pGr-FO-F9s" secondAttribute="top" id="MCq-6m-t9q"/>
+                            <constraint firstItem="y8A-So-SpT" firstAttribute="trailing" secondItem="pGr-FO-F9s" secondAttribute="trailing" id="MjU-xo-CpN"/>
+                            <constraint firstItem="Ug5-Kc-LWe" firstAttribute="bottom" secondItem="pGr-FO-F9s" secondAttribute="bottom" id="R7V-B2-fJf"/>
+                            <constraint firstItem="Ug5-Kc-LWe" firstAttribute="leading" secondItem="pGr-FO-F9s" secondAttribute="leading" id="VIY-oi-2R3"/>
+                            <constraint firstItem="Ug5-Kc-LWe" firstAttribute="top" secondItem="y8A-So-SpT" secondAttribute="bottom" id="YHv-te-QLh"/>
+                            <constraint firstItem="Ug5-Kc-LWe" firstAttribute="trailing" secondItem="pGr-FO-F9s" secondAttribute="trailing" id="nOQ-0A-gx3"/>
+                            <constraint firstItem="y8A-So-SpT" firstAttribute="leading" secondItem="pGr-FO-F9s" secondAttribute="leading" id="yRa-ua-fxs"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="pGr-FO-F9s"/>
                     </view>
                     <navigationItem key="navigationItem" id="na8-dB-Rs2">
@@ -466,7 +476,7 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpL-iu-E3T">
-                                            <rect key="frame" x="235" y="2" width="52" height="35"/>
+                                            <rect key="frame" x="211" y="2" width="81" height="35"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <state key="normal" title="Search">
@@ -477,7 +487,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rfD-4k-frl">
-                                            <rect key="frame" x="220" y="2" width="72" height="35"/>
+                                            <rect key="frame" x="211" y="2" width="81" height="35"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <state key="normal" title="Cancel">
